Removed nonessential files

--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Quote Generator</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
@@ -16,12 +16,10 @@
         <!-- quote -->
         <div class="quote-text">
             <i class="fas fa-quote-left"></i>
-            <!-- <span id="quote">What you are is what you have been. What you'll be is what you do now.</span> -->
             <span id="quote"></span>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <!-- <span id="author">Buddha</span> -->
             <span id="author"></span>
         </div>
 
@@ -38,7 +36,6 @@
     <div class="loader" id="loader"></div>
 
     <!-- Script -->
-    <script src="quotes.js"></script>
     <script src="script.js"></script>
 </body>
 
