added a score paragragh to display the scores on the page

--- a/Rock-Paper-Scissors-Game/index.html
+++ b/Rock-Paper-Scissors-Game/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Rock Paper Scissors Tutorial</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>ROCK PAPER SCISSORS GAME</nav>
     <div class="choice-container">
       <div>
-        <h2> <img src="./public/computer.png" alt="" class="logo"> <br> Computer Choice</h2>
-        <img id="computer-choice" src="" >
+        <h2>
+          <img src="./public/computer.png" alt="" class="logo" /> <br />
+          Computer Choice
+        </h2>
+        <img id="computer-choice" src="" />
       </div>
       <div>
-        <h2> <img src="./public/gamer.png" alt="" class="logo"> <br> User Choice</h2>
-        <img id="user-choice" src="" >
+        <h2>
+          <img src="./public/gamer.png" alt="" class="logo" /> <br />
+          User Choice
+        </h2>
+        <img id="user-choice" src="" />
       </div>
     </div>
 
     <div class="button-container">
-      <img id="Rock" src="./public/rock.png" alt="Rock"><br>
-      <img id="Paper" src="./public/paper.png" alt="Paper">
-      <img id="Scissors" src="./public/scissors.png" alt="Scissors">
+      <img id="Rock" src="./public/rock.png" alt="Rock" /><br />
+      <img id="Paper" src="./public/paper.png" alt="Paper" />
+      <img id="Scissors" src="./public/scissors.png" alt="Scissors" />
     </div>
+    <p class="js-score score"></p>
 
     <div class="winner-container">
       <h2>Winner:</h2>
