added a paragragh that confirms the action of reset score before acting

--- a/Rock-Paper-Scissors-Game/index.html
+++ b/Rock-Paper-Scissors-Game/index.html
@@ -32,6 +32,7 @@
 
     <p class="js-score score"></p>
     <button class="js-resetScore-button resetScore">Reset Score</button>
+    <p class="js-confirmation-message message-button"></p>
 
     <div class="winner-container">
       <h2>Winner:</h2>
