added a reset score button

--- a/Rock-Paper-Scissors-Game/index.html
+++ b/Rock-Paper-Scissors-Game/index.html
@@ -30,6 +30,7 @@
       <img id="Scissors" src="./public/scissors.png" alt="Scissors" />
     </div>
     <p class="js-score score"></p>
+    <button class="js-resetScore-button resetScore">Reset Score</button>
 
     <div class="winner-container">
       <h2>Winner:</h2>
