--- a/Rock-Paper-Scissors-Game/index.html
+++ b/Rock-Paper-Scissors-Game/index.html
@@ -31,6 +31,7 @@
     </div>
     <p class="js-score score"></p>
     <button class="js-resetScore-button resetScore">Reset Score</button>
+    <p class="js-confirmation-message message-button"></p>
 
     <div class="winner-container">
       <h2>Winner:</h2>
